docs for entree and hors doeuvres controllers
